    - added support for postfilter functions that are applied to compiled
      template right after compilation. (Andrei)
    - fixed the name of clear_compile_tpl() API function to clear_compiled_tpl.
      (Andrei)
    - added fix for removing comments so that the line numbers are reported
      correctly in case of errors. (patch from Anders Janson)
    - made html_options output xhtml compatible code. (Monte, Arnaud Limbourg)

Version 1.4.5
-------------
    - update FAQ with index of questions at the top
    - update overlib to 3.50, adjust addon code so that the overlib.js
      file isn't modified, and not using the mini one. (Monte)
    - added many more options to html_select_date. (Alexander Skwar, Andrei)
    - added support for generating different compiled templates from the same
      source template. (Hans-Peter Oeri, Andrei)
    - modified Smarty to pass itself to insert functions as the second
      parameter. (Andrei)
    - modified Smarty to pass itself to prefilter functions as the second
      parameter. (Andrei)
    - fixed syntax error when including a non-existant template with security
      enabled. (Monte)
    - fixed comments handling to allow commenting out template blocks. (Andrei)
    - implemented named capture buffers, with results accessible via
      $smarty.capture.<name>. (Andrei)
    - added ability to index arrays directly by numbers. (Andrei)
    - fixed bug with SMARTY_DIR not prepended to Config_File include. (Monte)

Version 1.4.4
-------------
    - fixed problem with including insecure templates with security enabled.
      (Monte)
    - numerous documentation updates. (Monte) 
    - added ENT_QUOTES to escapement of html. (Monte, Sam Beckwith)
    - implemented access to request variables via auto-assigned $smarty
      template variable. (Andrei)
    - fixed a bug with parsing function arguments inside {if} tags if a comma
      was present. (Andrei)
    - updated debug console with config file vars. (Monte)